beta добавлена возможность изменения ролей

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -27,7 +27,7 @@
   <!-- Пользователи -->
   <a href="/manage_students.html">Управление студентами</a>
   <a href="/manage-teachers.html">Управление учителями</a>
-  <a href="/users-roles.html">Управление ролями</a>
+  <a href="/users.html">Управление ролями</a>
 
   <!-- Учебные материалы -->
   <a href="/manage-teachers-subject.html">Управление предметами</a>
